--- a/q/274018.html
+++ b/q/274018.html
@@ -26,16 +26,49 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
-<tr d-ix="1"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
-<tr d-ix="2"><td>023</td><td>Charcoal</td><td>240708T225518Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274032#274032">Neil</a></td></tr>
-<tr d-ix="3"><td>076</td><td>Google Sheets</td><td>240708T184726Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274028#274028">z..</a></td></tr>
-<tr d-ix="4"><td>076</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
-<tr d-ix="5"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
-<tr d-ix="6"><td>069</td><td>Python 3</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
-<tr d-ix="7"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
+<tr d-ix="0"><td>020</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
+<tr d-ix="1"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
+<tr d-ix="2"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
+<tr d-ix="3"><td>023</td><td>Charcoal</td><td>240708T225518Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274032#274032">Neil</a></td></tr>
+<tr d-ix="4"><td>076</td><td>Google Sheets</td><td>240708T184726Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274028#274028">z..</a></td></tr>
+<tr d-ix="5"><td>076</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
+<tr d-ix="6"><td>030</td><td>sed r</td><td>240708T164928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274026#274026">guest430</a></td></tr>
+<tr d-ix="7"><td>069</td><td>Python 3</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
+<tr d-ix="8"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 20 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<pre><code>žV5δôøJIlδå€üαßIágΘì
+</code></pre>
+<p>Input as a list of characters.<br />
+Output as a 05AB1E truthy/falsey result (only 1 is truthy in 05AB1E), so this will output either <code>01</code> or <code>1</code> as truthy and <code>00</code>, <code>0</code>, or <code>10</code> as falsey.<br />
+Uses the QWERTY keyboard.</p>
+<p><a href="https://tio.run/##yy9OTMpM/f//6L4w03NbDm85vMPLMwfIWPqoac3hPec2Hp7veXhh@rkZh9f8/x@tVKyko5QNxKlAXADEJUCcCcTJUBokn6sUCwA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKSfWXw4Qn/j@4LMz235fCWwzu8inOAjKWPmtYc3nNu4@H5xYcXpp@bcXjNfxf7TCUFjZKi0pKMSk2lw6uBnLTEnOJUIKdW53@0UnF2akFJZnJmca6SjpKrn4t/uK@rXwiQXViamFeSWVIJZKZkFhek5gAZ2YmVidnFQEYiCIOIktTiEiAVHuTv5w7iZmQWl2fm5KQlZoLUn9sKUgcmz20F68mBcnISlWIB" rel="nofollow noreferrer">verify all test cases</a>.</p>
+<p><strong>Explanation:</strong></p>
+
+<pre class="lang-python prettyprint-override"><code>žV       # Push [&quot;qwertyuiop&quot;,&quot;asdfghjkl&quot;,&quot;zxcvbnm&quot;]
+   δ     # Map over each string:
+  5 ô    #  Split it into parts of size 5
+     ø   # Zip/transpose; swapping rows/columns
+      J  # Join the inner lists together:
+         #  [&quot;qwertasdfgzxcvb&quot;,&quot;yuiophjklnm&quot;]
+I        # Push the input-list
+ l       # Lowercase each inner character
+  δ      # Double-vectorized over the two lists:
+   å     #  Contains-check
+    €    # Map over each inner list:
+     ü   #  For each overlapping pair in this list:
+      α  #   Take the absolute difference of the pair
+       ß # Push the flattened minimum
+         # (1 if all are truthy; 0 if any are falsey; &quot;&quot; if empty)
+I        # Push the input-list again
+ á       # Only keep all letters of the list
+  g      # Then pop and push its length
+   Θ     # Check whether this length is exactly 1
+    ì    # Prepend it in front of the earlier check
+         # (after which the result is output implicitly)
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
 <p>Expects an array of characters. Returns <strong>0</strong> for <em>&quot;ping-pong&quot;</em> or <strong>1</strong> for <em>&quot;empty or not ping-pong&quot;</em>.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a&lt;1|a.some(q=c=&gt;q-(q=/[h-puy]/i.test(c)^(a^=1)))
@@ -49,7 +82,7 @@
 </code></pre>
 <p><a href="https://tio.run/##ddBNC4JAEAbge78ilg7rQYPudurjlEEIHUxhsDUnNzVnLST77fZBheF6G3h4mXnnCBegsMBcmWm2F01kN2RPx8Go9mIzLyv/NrnXXvCbx2gpQYqT0YRZSpkUlswOnDPPLUoVVz4zjEFbIs4oEbnCEOnEhsMuz53ZeruaO@5TNXwuIVWoqpdqeI@UC/lGHSdQQUK9DB/58uC/1C71FiBJ2wra2S6/vsT6ebtZO0vWn46RrihlBCg1u9tXP9PNAw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
 <pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBPSIsIiIsIlvih6nGm2vigKI1duG6h+KIkXZGVDtmwq9BSSIsIl1gIGA9Iiwic2tlcHRpY2lzbVxuRU5ET1dNRU5UXG5xdWFudGl0eVxuZGlzcGVsXG5rYXlha3NcbmFcbmFhXG50ZXN0XG5XUk9OR1xudGhpc3dpbGxmYWlsXG5cIlwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -77,7 +110,7 @@
 </code></pre>
 <p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
 <pre><code>∧θ№…01⊕Ｌθ⭆θ№⁺⪫…h¦qωuy↧ι
 </code></pre>
 <p><a href="https://tio.run/##RYzBCgIhGIRfRTz9gkGdO4WnYoOlnkDcHxXsd3W1xac369LAwAzMN8bpbKIOvc/ZU4ELLZAkU7GOopoJqFxcgR9PXLIrmYwvpIILTEi2OEhCCMmeZcD2rtc/O4e6wS16gocmi8DdOOCJj/U@zGv7xinumI3eELz46dx7qpqKL60f3uED" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Outputs a Charcoal boolean, i.e. <code>-</code> if the word is ping-pong, nothing if not. Explanation:</p>
@@ -101,7 +134,7 @@
                         Implicitly print
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Google Sheets, 76 bytes</h1>
+<div id="pu4" class="pu"><h1>Google Sheets, 76 bytes</h1>
 <pre class="lang-cpp prettyprint-override"><code>=SORT(AND(1=LEN(IFERROR(SPLIT(REGEXREPLACE(A2,&quot;(?i)[h-puy]&quot;,&quot; $0 &quot;),&quot; &quot;))))) 
 </code></pre>
 <p><a href="https://i.sstatic.net/7AfptWFe.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/7AfptWFe.png" alt="enter image description here" /></a></p>
@@ -111,7 +144,7 @@
 </code></pre>
 <p><a href="https://i.sstatic.net/KPkFMsiG.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/KPkFMsiG.png" alt="enter image description here" /></a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 89 </s> <s> 83 </s> 76 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 89 </s> <s> 83 </s> 76 bytes</h1>
 <p><em>-6 bytes by walrusing</em> <code>'yuiophjklnm'</code><em>.</em><br />
 <em>-7 bytes by Mukundan314.</em></p>
 
@@ -119,7 +152,7 @@
 </code></pre>
 <p><a href="https://tio.run/##HctLCsMwDADRq2hnCbIp3RRDTtIPuE1NlDiyUFxwcnmn7XJ4jG5lzHK@qLXY31oKy3MIUH2FIAOElBAZWNB877YPZx2nOcniiB44fQGMYjbg7h87K9auXk/@TtTUWApGdOv81sIvXn9fOwA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, 30 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed</a> -r, 30 bytes</h1>
 <pre><code>/[^h-puy]{2}|[h-puy]{2}|^$/IQ1
 </code></pre>
 <p><a href="https://tio.run/##K05N0U3PK/3/Xz86LkO3oLQyttqotiYawYxT0fcMNPz/vzg7@19@QUlmfl7xf90iAA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
@@ -140,14 +173,14 @@
 </code></pre>
 <p><a href="https://tio.run/##K05N0U3PK/3/Xz86LjUtUzcnL7@gtDK22qi2JhqNH6ei7xlo@P//v/yCksz8vOL/ukUA" rel="nofollow noreferrer" title="sed – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 69 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 69 bytes</h1>
 <p>Takes input as a bytestring</p>
 
 <pre class="lang-python prettyprint-override"><code>lambda x:len({i%2^(j&amp;95in b'HIJKLMNOPUY')for i,j in enumerate(x)})==1
 </code></pre>
 <p><a href="https://tio.run/##dc1ta8IwEAfw9/0UR2AzgSp7YC8mdCDMbW7aytyQ4RxETfE0TbMmZcrYZ@/S6huxHiSB/P53p7d2marrIoYAPgvJk9mCw6YthaK/eHb1RVfntzeoYNZ46j2/9AdhNHz/aLA4zQD9FTgRKk9Exq2gG/bHguCyKFGiEqWm2k26YG0PXKHSPoiNdrsSrqmxWcsddJ9lvGW0REtJkzBWxXfJ6g6A2CwXxKsgza2DmLp5LaHm6ULQfYvOUFk6IQ@dXp/4QIad0YhMJ/sZrm/qQyZ0VrYy5807l3LfrDBroS3O0SRQVXP3lFu9bngfjQfd8A2O7TvnyqLdQo0t0GghAepszbd8beqNw2EdGK@1mEsjPCuMPYnj1yh8PNm5RPODUsYc5RECnN75Dw" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl 5</a> <code>-p</code>, 31 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://www.perl.org/" rel="noreferrer">Perl 5</a> <code>-p</code>, 31 bytes</h1>
 
 <pre class="lang-perl prettyprint-override"><code>$_&amp;&amp;=!/[h-puy]{2}|[^h-puy]{2}/i
 </code></pre>
