--- a/q/274018.html
+++ b/q/274018.html
@@ -26,9 +26,9 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>020</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
-<tr d-ix="1"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
-<tr d-ix="2"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
+<tr d-ix="0"><td>nan</td><td>Vyxal</td><td>240709T051457Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274035#274035">lyxal</a></td></tr>
+<tr d-ix="1"><td>020</td><td>05AB1E</td><td>240709T080208Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274038#274038">Kevin Cr</a></td></tr>
+<tr d-ix="2"><td>051</td><td>JavaScript ES6</td><td>240708T161437Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274023#274023">Arnauld</a></td></tr>
 <tr d-ix="3"><td>023</td><td>Charcoal</td><td>240708T225518Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274032#274032">Neil</a></td></tr>
 <tr d-ix="4"><td>076</td><td>Google Sheets</td><td>240708T184726Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274028#274028">z..</a></td></tr>
 <tr d-ix="5"><td>076</td><td>Python 3.8 prerelease</td><td>240708T160948Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274022#274022">squarero</a></td></tr>
@@ -36,7 +36,35 @@
 <tr d-ix="7"><td>069</td><td>Python 3</td><td>240708T170630Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274027#274027">Mukundan</a></td></tr>
 <tr d-ix="8"><td>031</td><td>Perl 5 p</td><td>240708T162921Z</td><td><a href="https://codegolf.stackexchange.com/questions/274018/keyboard-ping-pong/274024#274024">Xcali</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 20 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
+<pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI
+</code></pre>
+<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBPSIsIiIsIlvih6nGm2vigKI1duG6h+KIkXZGVDtmwq9BSSIsIl1gIGA9Iiwic2tlcHRpY2lzbVxuRU5ET1dNRU5UXG5xdWFudGl0eVxuZGlzcGVsXG5rYXlha3NcbmFcbmFhXG50ZXN0XG5XUk9OR1xudGhpc3dpbGxmYWlsXG5cIlwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
+<p>Bitstring:</p>
+<pre><code>0110100000110010000101110000101100010110000010110110100110101011010101011111000101101010010111000001110111100000010110110
+</code></pre>
+<p>Outputs a space for true, an empty string for false. The footer in the link converts the result to <code>0</code> or <code>1</code> for convenience. Uses the qwerty layout.</p>
+<h2>Explained</h2>
+<pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏‏​⁡⁠⁡‌⁢​‎‏​⁢⁠⁡‌⁣​‎‏​⁢⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁣⁡⁪‏‏​⁡⁠⁡‌⁢⁤​‎‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏‏​⁡⁠⁡‌⁣⁡​‎‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏‏​⁡⁠⁡‌⁣⁣​‎‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏‏​⁡⁠⁡‌⁣⁤​‎‏​⁢⁠⁡‌⁤⁡​‎‏​⁢⁠⁡‌⁤⁢​‎‎⁪⁡⁪⁠⁪⁤⁤⁪‏‏​⁡⁠⁡‌⁤⁣​‎‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏‏​⁡⁠⁡‌­
+[                  # ‎⁡Only execute the following if the input isn't the empty string.
+# ‎⁢Why else do you think false is represented as the empty string? :p
+# ‎⁣It was easier to special case it
+ ⇩ƛ                # ‎⁤To each character in the lowercased input:
+   k•              # ‎⁢⁡Push a list of each row of qwerty
+     5vẇ           # ‎⁢⁢Split each into [first 5 characters, rest]
+        ∑          # ‎⁢⁣And fold the list by addition. This gives a list of [left keys, right keys]
+         vFT       # ‎⁢⁤Determine whether the character is a left or right key.
+         vF        # ‎⁣⁡  Filter out the key from each side
+             f¯    # ‎⁣⁣Flatten that and get the forward differences
+# ‎⁣⁤This will be used to determine whether there's a pattern of left/right or right/left. 
+# ‎⁤⁡A 0 in this list means that two characters in a row are from the same side. 
+               A   # ‎⁤⁢Check whether all numbers are non-0, as per the above explanation of why. This will return either 0 or 1
+                I  # ‎⁤⁣Push that many spaces. This is to be consistent with the empty string output. 
+💎
+</code></pre>
+<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 20 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>žV5δôøJIlδå€üαßIágΘì
 </code></pre>
 <p>Input as a list of characters.<br />
@@ -68,7 +96,7 @@ I        # Push the input-list again
          # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript (ES6), 51 bytes</h1>
 <p>Expects an array of characters. Returns <strong>0</strong> for <em>&quot;ping-pong&quot;</em> or <strong>1</strong> for <em>&quot;empty or not ping-pong&quot;</em>.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;a&lt;1|a.some(q=c=&gt;q-(q=/[h-puy]/i.test(c)^(a^=1)))
@@ -81,34 +109,6 @@ I        # Push the input-list again
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;/^$|[h-puy]{2}|[^h-puy]{2}/i.test(s)
 </code></pre>
 <p><a href="https://tio.run/##ddBNC4JAEAbge78ilg7rQYPudurjlEEIHUxhsDUnNzVnLST77fZBheF6G3h4mXnnCBegsMBcmWm2F01kN2RPx8Go9mIzLyv/NrnXXvCbx2gpQYqT0YRZSpkUlswOnDPPLUoVVz4zjEFbIs4oEbnCEOnEhsMuz53ZeruaO@5TNXwuIVWoqpdqeI@UC/lGHSdQQUK9DB/58uC/1C71FiBJ2wra2S6/vsT6ebtZO0vWn46RrihlBCg1u9tXP9PNAw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 121 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 15.125 bytes</h1>
-<pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI
-</code></pre>
-<p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBPSIsIiIsIlvih6nGm2vigKI1duG6h+KIkXZGVDtmwq9BSSIsIl1gIGA9Iiwic2tlcHRpY2lzbVxuRU5ET1dNRU5UXG5xdWFudGl0eVxuZGlzcGVsXG5rYXlha3NcbmFcbmFhXG50ZXN0XG5XUk9OR1xudGhpc3dpbGxmYWlsXG5cIlwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
-<p>Bitstring:</p>
-<pre><code>0110100000110010000101110000101100010110000010110110100110101011010101011111000101101010010111000001110111100000010110110
-</code></pre>
-<p>Outputs a space for true, an empty string for false. The footer in the link converts the result to <code>0</code> or <code>1</code> for convenience.</p>
-<h2>Explained</h2>
-<pre><code>[⇩ƛk•5vẇ∑vFT;f¯AI­⁡​‎‎⁪⁡⁪⁠⁪⁡⁪‏‏​⁡⁠⁡‌⁢​‎‏​⁢⁠⁡‌⁣​‎‏​⁢⁠⁡‌⁤​‎‎⁪⁡⁪⁠⁪⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁪‏‏​⁡⁠⁡‌⁢⁡​‎‎⁪⁡⁪⁠⁪⁤⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁡⁪‏‏​⁡⁠⁡‌⁢⁢​‎‎⁪⁡⁪⁠⁪⁢⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁢⁤⁪‏‏​⁡⁠⁡‌⁢⁣​‎‎⁪⁡⁪⁠⁪⁣⁡⁪‏‏​⁡⁠⁡‌⁢⁤​‎‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁤⁪‏‏​⁡⁠⁡‌⁣⁡​‎‎⁪⁡⁪⁠⁪⁣⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁣⁣⁪‏‏​⁡⁠⁡‌⁣⁣​‎‎⁪⁡⁪⁠⁪⁤⁢⁪‏⁠‎⁪⁡⁪⁠⁪⁤⁣⁪‏‏​⁡⁠⁡‌⁣⁤​‎‏​⁢⁠⁡‌⁤⁡​‎‏​⁢⁠⁡‌⁤⁢​‎‎⁪⁡⁪⁠⁪⁤⁤⁪‏‏​⁡⁠⁡‌⁤⁣​‎‎⁪⁡⁪⁠⁪⁢⁡⁡⁪‏‏​⁡⁠⁡‌­
-[                  # ‎⁡Only execute the following if the input isn't the empty string.
-# ‎⁢Why else do you think false is represented as the empty string? :p
-# ‎⁣It was easier to special case it
- ⇩ƛ                # ‎⁤To each character in the lowercased input:
-   k•              # ‎⁢⁡Push a list of each row of qwerty
-     5vẇ           # ‎⁢⁢Split each into [first 5 characters, rest]
-        ∑          # ‎⁢⁣And fold the list by addition. This gives a list of [left keys, right keys]
-         vFT       # ‎⁢⁤Determine whether the character is a left or right key.
-         vF        # ‎⁣⁡  Filter out the key from each side
-             f¯    # ‎⁣⁣Flatten that and get the forward differences
-# ‎⁣⁤This will be used to determine whether there's a pattern of left/right or right/left. 
-# ‎⁤⁡A 0 in this list means that two characters in a row are from the same side. 
-               A   # ‎⁤⁢Check whether all numbers are non-0, as per the above explanation of why. This will return either 0 or 1
-                I  # ‎⁤⁣Push that many spaces. This is to be consistent with the empty string output. 
-💎
-</code></pre>
-<p>Created with the help of <a href="https://vyxal.github.io/Luminespire" rel="nofollow noreferrer">Luminespire</a>.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 23 bytes</h1>
 <pre><code>∧θ№…01⊕Ｌθ⭆θ№⁺⪫…h¦qωuy↧ι
