--- a/q/274051.html
+++ b/q/274051.html
@@ -52,7 +52,31 @@ s!\\ /! | !gp
 s!| | ! \\|/!g;s/|$//;:
 </code></pre>
 <p><a href="https://tio.run/##dVGxbsJQDNz9Fc9SVNoMcYEujYeO/QFGCykUGiYaKREU5H9Pzy9UQhVdEsc@350v/W47jnvtueIkyYxb/dZeKpH8TElafUdpB5GOeoDYBaCzm4mLmWNYoOp0j7EZAMkTtx2BB3AHHp9aN/gsAOBoO6MJPgiAJ0EGXbwZJeuZQQyosNY7sHrQgghDx7pAYNoZdkEGrGfeycgfG1hH5QEJJ1iIjShJ1qkEpQyN1pt8ZFWK0OQkpwGHa0Aly7zFXu47Lzq6jYAhF9QQLpjzLSzOt@7@83U10@oqB4NONFgHitxT6dO1@A@RVgpBIWBlbY@pNLOnqrSDzeVBdLWh3yu0vkyRXk9JQXmBi5tw79nGTMJve9/vZJfDjBehMo5NQzRfLImazceW6PP0NTvrcbZ8eX49NsPpBw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>Takes input as any unary character. Works for inputs of 2 or more. I'll add an explanation later, but basically it just outputs each line after it makes it. The little 'humps' between outputs in the test cases is the output for an input of 0; you can remove the extra newlines in the input if you want to see the output without them.</p>
+<p>takes input as any unary character. works for inputs of 2 or more. basically it just outputs each line after it makes it. the little 'humps' between outputs in the test cases is the output for an input of 0; you can remove the extra newlines in the input if you want to see the output without them.</p>
+<p>here's with trying to output three lines at a time:</p>
+<h3><s><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 546 bytes</s></h3>
+<pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
+s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
+s!\\ /! | !gp
+x;s! /|!|/ !g;:a;s!$!\\!;s! |!/ !p
+s!/ \\|!    !g;x;s/|.*//;G;s!..\(.*\)\n\1!\1|\\ /|!
+s!      / \\!|\\ /|!
+s/.*/&amp;\n&amp;\n&amp;/
+s!|\\ /|!| | |!3g
+T;s! | | |!/ \\|/ !3;Tr
+s!| | |! \\|/ \\!3;bh
+:a;p;s/^  //mg;s!/  \||  !&amp;    !mg;:h;/^  /ta
+:r;s/ |\n.*/ |/
+s!| | | \( *\) | | |!&amp;\n \\|/ \\\1/ \\|/!;be
+:k;s/^/  /gm;s!\\    !\\!;s!|    !|!g
+:e;s!\n[^\n]*$!&amp;&amp;!;G;s![^ \n]! !23g
+T;s!\n\( *\)\n\1!!;t;s/\n *\n *//p;tk
+:;p;s/^/  /gm;s/|  .*//gm;s!/ \\.*$!/!
+:q;s/....$/&amp;&amp;/mg
+#something else here to loop :q until the bottom line of cubes is filled in
+</code></pre>
+<p><a href="https://tio.run/##RVFBasMwELzrFVowJvXBS5qb9wH5QG7ZBhwabAgxbpxDC/t3d3Ztt8IS0ux4ZzSabp/z3MtENWXOqtTJt0xcM8eaM3dyxFYH5jFNIJExSD@mysaqhmKB3Sg9yqogZMvUjQl9QDfwcZSmxbEAgRw2Auj9XNMoY6zKVlfQPrqjWnd1pW866J50b97byD3ECLd/IOO3Ugf/GJQVN1gxOnTpFKJxCkWoH@T0dGaAC4aGB7n2CV5HWLlAhB@duMusZvBYhlNgTS9Rf7WpeYKbTQdYyMZbz6y7DPerKoxtGrpfLJBcb6m5u1Dk/JDIzwWWlCz2Rl1qbl4bzhcdPqqCypIiofMlA6BM7@sVEVWIRmQkr3g4AJh4PnndU7PcbBNkaHjgIe62arRnSs2XPz9GwWWJDOa5bVO7zG39H78" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>this one doesn't work yet (the last line of cubes is proving particularly hard to measure) but doing it this way might make it easier to golf.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 41 bytes</h1>
 <pre><code>ＮθＦ²Ｆ³Ｆθ«Ｆ³Ｍ∨μ¹✳⁺×⁴ι×μ⁻¹κＰ↑”{⊟∨÷ＩＤＲ▶#⟲⁹⁰e
