--- a/q/273996.html
+++ b/q/273996.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>015</td><td>Jelly</td><td>240710T000622Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274049#274049">Jonathan</a></td></tr>
-<tr d-ix="1"><td>067</td><td>C89</td><td>240709T214615Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274048#274048">John Bol</a></td></tr>
+<tr d-ix="0"><td>067</td><td>C89</td><td>240709T214615Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274048#274048">John Bol</a></td></tr>
+<tr d-ix="1"><td>015</td><td>Jelly</td><td>240710T000622Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274049#274049">Jonathan</a></td></tr>
 <tr d-ix="2"><td>034</td><td>JavaScript ES11</td><td>240708T151928Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274019#274019">Arnauld</a></td></tr>
 <tr d-ix="3"><td>029</td><td>APL+WIN</td><td>240708T152151Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274020#274020">Graham</a></td></tr>
 <tr d-ix="4"><td>nan</td><td>Nibbles</td><td>240708T115251Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/274012#274012">Dominic </a></td></tr>
@@ -39,11 +39,21 @@
 <tr d-ix="10"><td>024</td><td>sed</td><td>240708T043328Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273998#273998">guest430</a></td></tr>
 <tr d-ix="11"><td>034</td><td>R</td><td>240708T052254Z</td><td><a href="https://codegolf.stackexchange.com/questions/273996/is-it-an-option-for-the-ls-utility-specified-in-posix-1-2017/273999#273999">pajonk</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1>C89, 67 bytes</h1>
+<pre><code>char*strchr();f(c){return!!strchr(&quot;ikqrsglnoAaCmx1FpHLRdSftcu&quot;,c);}
+</code></pre>
+<p>This is just a wrapper around the C standard library function <code>strchr()</code>.  It leans on default <code>int</code> typing to golf away a few bytes of type declaration. Needing to declare <code>strchr()</code> because that function's return type is not <code>int</code>, it saves a few bytes by doing so itself instead of including the header where that function is declared, and by using a K&amp;R-style declaration that does not provide a prototype. That declaration could be moved inside the function to make the function be the only top-level unit, but that would not change the code size.</p>
+<h1>C89 (assuming ASCII), 49 bytes</h1>
+<pre><code>f(c){return c&lt;65?c==49:0x8ffd6d000608a5&gt;&gt;c%65&amp;1;}
+</code></pre>
+<p>This is a variation on @Arnauld's ES11 bitmask solution, adapted to account for C not necessarily providing an integer type wider than 64 bits.  The bitmask is made to fit in 64 bits by using it only for test characters with values greater than 64, special-casing the one option having a lesser value.</p>
+<p>HOWEVER, this approach assumes that the execution character set is congruent with US-ASCII, which is very common, but not required or universal.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 15 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>“7Ȥ2R¶Ṁṡỵ’BoØBċ
 </code></pre>
 <p>A monadic link that accepts a single character from <code>0-9A-Za-z</code> and yields <code>1</code> if it is an option or <code>0</code> if not.</p>
-<p><strong><a href="https://tio.run/##AWwAk/9qZWxsef//4oCcN8ikMlLCtuG5gOG5oeG7teKAmUJvw5hCxIv/LMOHKUf//yIwMTIzNDU2Nzg5QUJDREVGR0hJSktMTU5PUFFSU1RVVldYWVphYmNkZWZnaGlqa2xtbm9wcXJzdHV2d3h5eiI" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong></p>
+<p><strong><a href="https://tio.run/##AS0A0v9qZWxsef//4oCcN8ikMlLCtuG5gOG5oeG7teKAmUJvw5hCxIv/w4cp//8ieCI" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##AWwAk/9qZWxsef//4oCcN8ikMlLCtuG5gOG5oeG7teKAmUJvw5hCxIv/LMOHKUf//yIwMTIzNDU2Nzg5QUJDREVGR0hJSktMTU5PUFFSU1RVVldYWVphYmNkZWZnaGlqa2xtbm9wcXJzdHV2d3h5eiI" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
 <h4>How?</h4>
 <pre><code>“..’BoØBċ - Link: character, C
 “..’      - base 250 compressed number
@@ -52,11 +62,6 @@
      o    - logical OR (vectorises)
         ċ - count occurrences of {C}
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1>C89, 67 bytes</h1>
-<pre><code>char*strchr();f(c){return!!strchr(&quot;ikqrsglnoAaCmx1FpHLRdSftcu&quot;,c);}
-</code></pre>
-<p>This is just a wrapper around the C standard library function <code>strchr()</code>.  It leans on default <code>int</code> typing to golf away a few bytes of type declaration. Needing to declare <code>strchr()</code> because that function's return type is not <code>int</code>, it saves a few bytes by doing so itself instead of including the header where that function is declared, and by using a K&amp;R-style declaration that does not provide a prototype. That declaration could be moved inside the function to make the function be the only top-level unit, but that would not change the code size.</p>
 </div>
 <div id="pu2" class="pu"><h1>JavaScript (ES11), 34 bytes</h1>
 <p>Expects an ASCII code as a BigInt and returns <strong>0</strong> or <strong>1</strong>.</p>
