--- a/q/274051.html
+++ b/q/274051.html
@@ -26,18 +26,18 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>183</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="0"><td>182</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
 <tr d-ix="1"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
 <tr d-ix="2"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 <tr d-ix="3"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 183 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 182 bytes</h1>
 <p>Builds the output character by character.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,p=n*2-1,g=x=&gt;y?` |/\\
-`[X=w-x-p,s=y&gt;h/2,c=x-p&gt;5&amp;X&gt;4,x--?x&lt;p|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c?0:`1302203${y&lt;h&amp;y!=4*c}1010`[y%3*4+(X+y%3*!s*2&amp;3)]:(p-=y--%3&amp;&amp;2*s-1,x=w,4)]+g(x):&quot;&quot;)(w=n*8-3)
+`[X=w-x-p,s=y&gt;h/2,c=x-p&gt;4&amp;X&gt;4,~x?x--&lt;p|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c?0:`1302203${y&lt;h&amp;y!=4*c}1010`[y%3*4+(X+y%3*!s*2&amp;3)]:(p-=y--%3&amp;&amp;2*s-1,x=w,4)]+g(x):&quot;&quot;)(w=p*4)
 </code></pre>
-<p><a href="https://tio.run/##XY5NboMwGET3OYWDGsvGdmNsUlWED66BlEQiIvy0QgaFqNgKOTt1t129mTeb@b7@XKfq/jU@hBlu9drAaiAjDjow4YdQfPRUIuItWMhcXqJlfz5vylMBs7Bi5BO4rNsrXoFv2QEXWcytELlNx6VI5eKyGLu0ExpXuUzKSEulpH57eofdFuKwekUykuXJ7XQYM1Kwv7CdQoU1vSRkFOCE2GmMVTj5HxZmHtMLa4mlSRBQMvuDn0LTtRnupK8fyCBA6uiRAjp4MkbRc4NQNZhp6Ov3fmhJYCBADBl6/Dc0xFAvX@sv" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##XY5NboMwGET3OYWDGss2dmNstwvCB9dASiIRUX5aIYNCVGwl6dWpu@3qzbzZzNfl@zLX18/pJuz40awtrBZy4qEHy96F4lOgEgnvwEHuiwo99qfTpjqWsAgnJj6Dz/u94jWElhtc5ob/uMIJkU2PMpMPH6TPeqFxXci0SrRUSuqXe3DYb8Gw@pnIRFZHv9PMxKSM/8J2Zgprek7JJMALsdMYKzaHIw4Wbug57oijaRRRssDEDF3b8UqG5oYsAqQOARmgt8A4pui@Qage7TwOzeswdiSyEKEYWXr4N7TE0iCf6y8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
 <pre><code>{`0:&quot;\\/|&quot;(3|=8*x).[;;&amp;;+5 4#4\3947690525]/(x+x+!'4 5)+\+-4+9\,/1_'x#'&quot;,EA$&quot;}
